feat(new-hope): add shift and flip props in Combobox, Select

--- a/website/plasma-b2c-docs/docs/components/Combobox.mdx
+++ b/website/plasma-b2c-docs/docs/components/Combobox.mdx
@@ -584,7 +584,7 @@ type Items = Array<{
         ```
     </TabItem>
     <TabItem value="renderSelectionIcon" label="Render icon">
-        `renderSelectionIcon` - свойство для кастомной настройки иконки выбора элемента. Принимает коллбэк с один параметром: `selected`.
+        `renderSelectionIcon` - свойство для кастомной настройки иконки выбора элемента. Принимает коллбэк с одним параметром: `selected`.
 
         ```tsx live
         export function App() {
